# CCTools

./: .gitignore  CMakeLists.txt  LICENSE  Logger_8hh.html  Logger_8hh.js  Logger_8hh__dep__incl.map  Logger_8hh__dep__incl.md5  Logger_8hh__incl.map  Logger_8hh__incl.md5  Logger_8hh_source.html  README.md  annotated.html  annotated_dup.js  calc__result__handler__base_8h.html  calc__result__handler__base_8h.js  calc__result__handler__base_8h__dep__incl.map  calc__result__handler__base_8h__dep__incl.md5  calc__result__handler__base_8h_source.html  classCCTools_1_1CalcResultHandlerBase-members.html  classCCTools_1_1CalcResultHandlerBase.html  classCCTools_1_1CalcResultHandlerBase.js  classCCTools_1_1CalcResultHandlerBase__inherit__graph.map  classCCTools_1_1CalcResultHandlerBase__inherit__graph.md5  classCCTools_1_1Cube3D-members.html  classCCTools_1_1Cube3D.html  classCCTools_1_1Cube3D.js  classCCTools_1_1HarmonicsDataHandler-members.html  classCCTools_1_1HarmonicsDataHandler.html  classCCTools_1_1HarmonicsDataHandler.js  classCCTools_1_1HarmonicsDataHandler__coll__graph.map  classCCTools_1_1HarmonicsDataHandler__inherit__graph.map  classCCTools_1_1HarmonicsDataHandler__inherit__graph.md5  classCCTools_1_1Logger-members.html  classCCTools_1_1Logger.html  classCCTools_1_1MeshDataHandler-members.html  classCCTools_1_1MeshDataHandler.html  classCCTools_1_1MeshDataHandler.js  classCCTools_1_1MeshDataHandler__coll__graph.map  classCCTools_1_1MeshDataHandler__coll__graph.md5  classCCTools_1_1MeshDataHandler__inherit__graph.map  (+149 more)
.github/workflows/: doxygen.yml
doxygen/: Doxyfile  mainpage.dox
examples/: cct.json  example.cpp
include/: Logger.hh  calc_result_handler_base.h  constants.h  cube3d.hh  harmonic_drive_parameter.h  harmonics_data_handler.h  mesh_data_handler.h  model_calculator.h  model_handler.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  files_1.js  files_2.js  files_3.js  (+26 more)
src/: harmonic_drive_parameter.cpp  harmonics_data_handler.cpp  mesh_data_handler.cpp  model_calculator.cpp  model_handler.cpp
test/: main.cpp  test_cube3d.cpp  test_harmonic_drive_parameter.cpp  test_harmonics_calculator.cpp  test_harmonics_handler.cpp  test_mesh_data_handler.cpp  test_model_handler.cpp
test_data/: curvature_model.json  quad_test.json  quad_test_B5_linear.json  quad_test_all_linear.json  quad_test_no10.json  quad_test_noBinormal.json  quad_test_unoptimized.json  quad_test_unoptimized_allA.json  quad_test_unoptimized_allA_linear.json
